# naIEng

./: .gitignore  README.md  README_JP.md  index.html  package-lock.json  package.json
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
